components/apps/base/diagnostics/echo-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "alpha-e-box"
      #cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: networking-chain-authelia@kubernetescrd
  namespace: utilities
  name: &appname echo-server
spec:
  rules:
  - host: &uri echo.${SECRET_DEV_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: *appname
            port:
              number: 80
  tls:
  - hosts:
    - *uri
    secretName: *uri
